--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cipher-fs",
   "private": true,
-  "version": "0.0.0",
+  "author": "MeBadDev",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
